# continuous-rename

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  main.rs  pattern.rs  prompt.rs  renamer.rs
