[package]
name = "continuous-rename"
version = "1.0.0"
edition = "2021"
authors = ["Destin Ecarma <109215379+DestinEcarma@users.noreply.github.com>"]
license = "MIT"
description = "A command-line tool to batch rename files in a folder/directory using a numbered pattern."
readme = "README.md"
repository = "https://github.com/DestinEcarma/continuous-rename"
keywords = ["cli", "rename", "files"]
categories = ["command-line-utilities"]

[[bin]]
name = "continuous-rename"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
dialoguer = "0.11.0"
regex = "1.11.1"
